# vpn4ik

./: .dockerignore  .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_api.py  run_bot.py
admin/handlers/: panel.py
api/: main.py
api/routes/: health.py
backend/: config.py  container.py  enums.py  main.py  node_config.py  runtime.py  scheduler.py  user_service.py
bot/: main.py  qr.py  states.py
bot/handlers/: support.py  user.py
bot/keyboards/: __init__.py  main.py
database/: models.py  repositories.py  session.py
docs/: architecture.md  integration-checklist.md  launch.md
monitoring/: service.py
payments/: admin_service.py  catalog.py  service.py
support/: __init__.py  service.py
xray/: __init__.py  panel_client.py  service.py
