[project]
name = "telegram-vpn-service"
version = "0.1.0"
description = "Telegram-first VPN service backend built around aiogram, PostgreSQL, Redis, APScheduler, and Xray/3x-ui."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.7.0,<4.0.0",
    "sqlalchemy>=2.0.30,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "redis>=5.0.4,<6.0.0",
    "pydantic>=2.7.1,<3.0.0",
    "pydantic-settings>=2.2.1,<3.0.0",
    "apscheduler>=3.10.4,<4.0.0",
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn>=0.30.1,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "alembic>=1.13.1,<2.0.0",
    "structlog>=24.1.0,<25.0.0",
    "qrcode[pil]>=7.4.2,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<9.0.0",
    "pytest-asyncio>=0.23.7,<1.0.0",
    "ruff>=0.4.8,<1.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "backend",
    "bot",
    "bot.handlers",
    "bot.keyboards",
    "api",
    "api.routes",
    "database",
    "payments",
    "support",
    "admin",
    "admin.handlers",
    "monitoring",
    "xray",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
